--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="buttonHeight">100dp</dimen>
-    <dimen name="buttonWidth">100dp</dimen>
 
+
+    <dimen name="buttonWidth">100dp</dimen>
+    <dimen name="buttonHeight">100dp</dimen>
+
+
+    <dimen name="hintSize">15dp</dimen>
 </resources>
