--- a/app/src/main/res/layout/activity_relief_form.xml
+++ b/app/src/main/res/layout/activity_relief_form.xml
@@ -6,60 +6,103 @@
     android:layout_height="match_parent"
     tools:context=".AfterLogin.ReliefFormActivity"
     android:orientation="vertical"
-    android:gravity="center">
+    android:padding="20dp">
+
+
+
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <AutoCompleteTextView
+            android:id="@+id/material"
+            android:hint="Enter material required"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/hintSize"
+            />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+        <EditText
+            android:id="@+id/quantity"
+            android:hint="Enter quantity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/hintSize"
+            />
+    </android.support.design.widget.TextInputLayout>
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Enter district"/>
+        <Spinner
+            android:id="@+id/district"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Relief form"
-        android:textSize="27dp"/>
-
-    <EditText
-        android:id="@+id/details"
-        android:hint="Details"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:text="Enter locality"/>
+        <Spinner
+            android:id="@+id/locality"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
 
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:id="@+id/landmarks"
+            android:hint="Enter landmarks"
+            android:textSize="@dimen/hintSize"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:id="@+id/disasterDetails"
+            android:hint="Please enter details about your request"
+            android:textSize="@dimen/hintSize"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </android.support.design.widget.TextInputLayout>
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="bottom">
 
+        <Button
+            android:id="@+id/requestReliefButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Submit"
+            android:layout_gravity="bottom"
+            android:onClick="requestReliefClick"
+            android:textColor="#E9E4E4"
+            android:background="@color/colorPrimaryDark"/>
 
-    <EditText
-        android:id="@+id/material"
-        android:hint="Material"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    </LinearLayout>
 
-
-
-    <EditText
-        android:id="@+id/quantity"
-        android:hint="Quantity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <Spinner
-        android:id="@+id/district"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
-    <Spinner
-        android:id="@+id/locality"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <EditText
-        android:id="@+id/landmarks"
-        android:hint="Landmarks"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <Button
-        android:id="@+id/requestReliefButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Submit Request Relief"
-        android:onClick="requestReliefClick"/>
 
 </LinearLayout>
