before changing the registration look

--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -16,6 +16,14 @@
         android:padding="20dp"
         android:orientation="vertical">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="PROFILE"
+            android:layout_gravity="center"/>
+
+
+
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
@@ -222,7 +230,8 @@
             android:backgroundTint="@color/colorPrimaryDark"
             android:textColor="#E4E2E2"
             android:text="Register"
-            android:layout_gravity="bottom"/>
+            android:layout_gravity="bottom"
+            android:onClick="RegistrationClick"/>
 
     </LinearLayout>
 
