incident upload changes. Zonal officer is selected in the serversidde. location is sent directly in the server

--- a/app/src/main/res/layout/activity_relief_form.xml
+++ b/app/src/main/res/layout/activity_relief_form.xml
@@ -50,14 +50,19 @@
             android:layout_height="wrap_content" />
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Enter locality"/>
-        <Spinner
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <AutoCompleteTextView
             android:id="@+id/locality"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:hint="Enter locality"/>
+
+    </android.support.design.widget.TextInputLayout>
+
+
 
 
     <android.support.design.widget.TextInputLayout
