--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,15 @@
     tools:context=".MainActivity"
     android:orientation="vertical"
     android:gravity="center"
+    android:background="@drawable/gplaypattern_bg"
     >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="User name"/>
+        android:text="Phone number"/>
     <EditText
-        android:id="@+id/usernameEt"
+        android:id="@+id/phoneNumberEt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
