zonal officer calling added but using gsp is still not working

--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -33,6 +33,7 @@
             android:drawableTop="@drawable/ic_team2"
             android:text="My Zonal Officer"
             android:textAllCaps="false"
+            android:onClick="zonalOfficerClick"
 
             />
 
@@ -92,6 +93,7 @@
             android:text="Resource Mapping"
             android:textAllCaps="false"
 
+            android:onClick="mapClick"
             />
 
         <Button
