--- a/app/src/main/res/layout/activity_relief_form.xml
+++ b/app/src/main/res/layout/activity_relief_form.xml
@@ -40,14 +40,14 @@
     </android.support.design.widget.TextInputLayout>
 
 
-        <TextView
+     <!--   <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Enter district"/>
         <Spinner
             android:id="@+id/district"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content" />-->
 
 
     <android.support.design.widget.TextInputLayout
