--- a/app/src/main/res/layout/activity_report_incident_form.xml
+++ b/app/src/main/res/layout/activity_report_incident_form.xml
@@ -40,7 +40,7 @@
         </LinearLayout>
 
 
-        <LinearLayout
+<!--        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -54,7 +54,7 @@
                 android:layout_height="wrap_content" />
 
 
-        </LinearLayout>
+        </LinearLayout>-->
 
         <LinearLayout
             android:layout_width="match_parent"
