--- a/app/src/main/res/layout/activity_zonal_officer.xml
+++ b/app/src/main/res/layout/activity_zonal_officer.xml
@@ -13,23 +13,22 @@
         android:orientation="vertical"
         android:padding="30dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/zonalOfficerHeading"
-            android:textSize="10dp"
-            android:textAlignment="center"/>
+        <!--      <TextView
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:text="@string/zonalOfficerHeading"
+                 android:textSize="10dp"
+                 android:textAlignment="center"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="zawnna"
-            android:textColor="#FFFFFF"
-            android:layout_margin="20dp"
-            android:background="#689F38"
-            android:onClick="zawnnaClick"/>
-
+                 android:layout_gravity="center"
+                 android:text="zawnna"
+                 android:textColor="#FFFFFF"
+                 android:layout_margin="20dp"
+                 android:background="#689F38"
+                 android:onClick="zawnnaClick"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -37,7 +36,7 @@
             android:layout_gravity="center"
             android:textSize="15dp"
             android:padding="10dp"
-            android:textStyle="italic"/>
+            android:textStyle="italic"/>  -->
 
         <AutoCompleteTextView
             android:id="@+id/addressName"
