client notification with firebase cloud message

--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -58,6 +58,7 @@
             android:drawableTop="@drawable/ic_email_home"
             android:text="Notifications"
             android:textAllCaps="false"
+            android:onClick="notificationClick"
 
             />
 
