--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".AfterLogin.DashboardActivity"
     android:orientation="vertical"
+    android:id="@+id/dashboardLayout"
     android:background="@color/tempColor">
 
 
