--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -99,10 +99,14 @@
             android:layout_height="wrap_content"
             android:text="LOCALITY"
             android:textSize="@dimen/regTextSize"/>
-        <Spinner
+        <AutoCompleteTextView
             android:id="@+id/locality"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+        <!--<Spinner-->
+            <!--android:id="@+id/locality"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content" />-->
 
         <TextView
             android:layout_width="wrap_content"
