Global notification added

--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -83,6 +83,8 @@
             android:layout_gravity="center"
             android:drawableTop="@drawable/ic_information_home"
             android:text="Important Contact"
+
+            android:onClick="importantContactClick"
             android:textAllCaps="false" />
 
 
